# production_line_exercise

./: .gitignore  README.md  exercise_context.odt  pyproject.toml  requirements.txt
examples/: usage.py
production_kpi/: __init__.py  kpis.py  loader.py  transforms.py
sql/: 1_tables.sql  2_sample_data.sql  3_sessions.sql  4_kpis.sql  README.md
tests/: test_kpis.py
