[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "production_kpi"
version = "0.1.0"
description = "A package for calculating production floor KPIs"
requires-python = ">=3.8"
dependencies = [
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
include = ["production_kpi*"]
